<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="seccion_1">seccion 1</string>
    <string name="seccion_2">seccion 2</string>
    <string name="seccion_3">seccion 3</string>
    <string name="opcion_1">opcion 1</string>
    <string name="opcion_2">opcion 2</string>
    <string name="otras_opciones">otras opciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
