<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grupo1"
        >
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/seccion_1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/seccion_2"/>
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/seccion_3"/>
    </group>

    <group android:id="@+id/grupo2"
        >
        <item
            android:id="@+id/menu_seccion_4"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/seccion_1"/>
        <item
            android:id="@+id/menu_seccion_5"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/seccion_2"/>
        <item
            android:id="@+id/menu_seccion_6"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/seccion_3"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/opcion_1"/>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/opcion_2"/>
        </menu>
    </item>
</menu>